<resources>
    <string name="app_name">Currency Converter</string>

    <!--button-->
    <string name="btn_submit">Submit</string>
    <string name="btn_next">Next</string>
    <string name="btn_flow">Flow</string>

    <!--text-->
    <string name="txt_select_country">Select Country</string>
    <string name="txt_conversation">0.13 USD</string>
    <!--hint-->
    <string name="hint_from">From</string>
    <string name="hint_to">To</string>
    <string name="hint_currency">Currency</string>
    <string name="hint_search">Search......</string>
    <!--toast-->
    <string name="toast_valid">Kindly check all the fields</string>
    <string name="toast_internet">Kindly check your internet connection</string>
    <string name="toast_cannot_same">From &amp; To country cannot be same</string>

    <array name="spinner">
        Balaji
        Sachin
    </array>
    
    <string name="txt_print_from_email">Print From Email</string>
    <string name="txt_dollar">$0.00</string>
    <string name="txt_check_out">Check Out</string>
    <string name="txt_claim">Claim #443-S.Wojo.pdf</string>
    
    <string name="txt_reset">Reset</string>
    <string name="txt_preview">Preview</string>
    <string name="txt_print">Print</string>

</resources>