<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MyToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:textAlignment="center"
        app:contentInsetStart="0dp"
        android:background="@color/primary_dark"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_home"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvToolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:singleLine="true"
                android:text="@string/txt_print_from_email"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintBaseline_creator="@id/ivHome"
                app:layout_constraintStart_toEndOf="@id/ivHome"
                app:layout_constraintEnd_toStartOf="@+id/clCheckOut"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCheckOut"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/ic_rect">

                <ImageView
                    android:id="@+id/ivVisa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_visas" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.5"
                    android:text="@string/txt_dollar"
                    app:layout_constraintStart_toEndOf="@id/ivVisa"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/tvCheckout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="1"
                    android:text="@string/txt_check_out"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/ivVisa" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>